--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^17.0.1",
     "react-axios": "^2.0.5",
     "react-dom": "^17.0.1",
+    "react-paginate": "^7.1.2",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
